[package]
name = "douyin-cli"
version = "2026.7.24"
edition = "2024"
rust-version = "1.88"
description = "A Rust CLI for Douyin OpenAPI and web workflows"
license = "AGPL-3.0-or-later"
repository = "https://github.com/LIghtJUNction/douyin"
exclude = [
    "packaging/**",
    "unsloth_compiled_cache/**",
]

[features]
default = []
cuda = ["whisper-rs/cuda"]

[[bin]]
name = "douyin"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.2", features = ["derive", "env"] }
base64 = "0.22.1"
percent-encoding = "2.3.2"
qrcode = { version = "0.14.1", default-features = false }
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "json", "rustls-tls"] }
ring = "0.17.14"
serde_json = "1.0.150"
symphonia = { version = "0.6.0", features = ["all-codecs", "all-formats"] }
url = "2.5.8"

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.16.0", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
whisper-rs = "0.16.0"

[profile.release]
lto = "thin"
strip = "symbols"
