[package]
name = "douyin-cli"
version = "2026.7.25"
edition = "2024"
rust-version = "1.88"
description = "A Rust CLI for Douyin OpenAPI and web workflows"
license = "AGPL-3.0-or-later"
repository = "https://github.com/LIghtJUNction/douyin"
exclude = [
    "packaging/**",
    "unsloth_compiled_cache/**",
]

[features]
default = []

[[bin]]
name = "douyin"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.2", features = ["derive", "env"] }
base64 = "0.22.1"
percent-encoding = "2.3.2"
qrcode = { version = "0.14.1", default-features = false }
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "json", "rustls-tls"] }
ring = "0.17.14"
serde_json = "1.0.150"
url = "2.5.8"

[profile.release]
lto = "thin"
strip = "symbols"
